@@ -1,2 +1,37 @@
 # DoorDash-Java-Project
 A JavaFX board game built with OOP principles — two monsters race to position 99 while collecting energy through doors, cards, and powerups. Features animated dice, confetti, sound effects, and Aurora Borealis UI theme.
+
+# DooR DasH: Scare vs Laugh Touchdown 🎮
+
+A 2-player board game built in Java with JavaFX GUI.
+
+## 🎯 Game Overview
+Two monsters (SCARER vs LAUGHER) compete on a 100-cell board. 
+The first to reach position 99 with 1000+ energy wins!
+
+## ✨ Features
+- 🎲 Animated dice rolling
+- 🚪 Door cells that gain/lose energy
+- 🃏 Card cells with special effects
+- 👾 Monster cells with powerup battles
+- ⚡ Unique powerups per monster type
+- 🎊 Confetti win animation
+- 🔊 Sound effects
+- 🌌 Aurora Borealis color theme
+
+## 🦾 Monster Types
+- 💨 Dasher — moves at 2x speed
+- ⚡ Dynamo — doubles energy changes
+- 🌀 MultiTasker — gains bonus energy
+- 🎭 Schemer — steals energy from opponents
+
+## 🛠️ Built With
+- Java 21
+- JavaFX 21
+- OOP principles (inheritance, polymorphism, interfaces)
+
+## 🚀 How to Run
+1. Install JavaFX SDK 21
+2. Add JavaFX to build path
+3. Run Main.java with VM args:
+   --module-path "path/to/javafx/lib" --add-modules javafx.controls,javafx.fxml
